tests/build/fail/widget/module_path_malformed1.rs
use zero_ui::core::widget;

#[widget($crate::)]
pub mod test_widget {}

fn main() {}
